--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -1,34 +1,51 @@
-# This is a basic workflow to help you get started with Actions
+name: MySQL Database Setup
 
-name: Krijimi database
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+on: 
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+  pull_request:
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  setup-mysql:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: my_database
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -proot"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Krijo database
-        run: 01-create-table.sql
+      - name: Install MySQL Client
+        run: sudo apt-get install -y mysql-client
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Wait for MySQL to be ready
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          for i in {30..0}; do
+            if mysqladmin ping -h 127.0.0.1 -u root -proot --silent; then
+              break
+            fi
+            echo 'Waiting for MySQL...'
+            sleep 1
+          done
+
+      - name: Run SQL Scripts
+        run: |
+          mysql -h 127.0.0.1 -u root -proot my_database < 01-create-table.sql
+          mysql -h 127.0.0.1 -u root -proot my_database < 02-seed-data.sql
+
+      - name: Verify Data
+        run: |
+          mysql -h 127.0.0.1 -u root -proot -e "USE my_database; SELECT * FROM employees;"
