--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -21,7 +21,7 @@ jobs:
           --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -p${{ secrets.SQL_PASSWORD }}"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5  # Rrit numrin e provave të shëndetit
+          --health-retries=5
 
     steps:
       - name: Checkout repository
@@ -32,7 +32,7 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          for i in {30..0}; do
+          for i in {60..0}; do
             if mysqladmin ping -h 127.0.0.1 -u root -p${{ secrets.SQL_PASSWORD }} --silent; then
               break
             fi
