--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -1,4 +1,4 @@
-name: MySQL Database Setup and Seed Data
+name: MySQL Setup and Seed Data
 
 on:
   push:
@@ -23,14 +23,20 @@ jobs:
         sudo systemctl start mysql
         sudo systemctl enable mysql
 
-    # 3. Krijo dhe inicializo bazën e të dhënave me skedarët SQL
-    - name: Create and Seed Database
+    # 3. Përdor MySQL root pa password ose me fjalëkalim të caktuar
+    - name: Set MySQL Root Password and Create Database
       run: |
-        sudo mysql -u root -p${{ secrets.MYSQL_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS my_database;"
-        sudo mysql -u root -p${{ secrets.MYSQL_PASSWORD }} my_database < ./01-create-table.sql
-        sudo mysql -u root -p${{ secrets.MYSQL_PASSWORD }} my_database < ./02-seed-data.sql
+        sudo mysql -e "UPDATE mysql.user SET authentication_string=PASSWORD('Moseprek12@') WHERE User='root';"
+        sudo mysql -e "FLUSH PRIVILEGES;"
+        sudo mysql -e "CREATE DATABASE IF NOT EXISTS my_database;"
 
-    # 4. Verifiko që të dhënat janë futur në tabelë
+    # 4. Ekzekuto SQL skriptet për krijimin e tabelave dhe futjen e të dhënave
+    - name: Execute SQL Scripts
+      run: |
+        sudo mysql -u root -p'Moseprek12@' my_database < ./01-create-table.sql
+        sudo mysql -u root -p'Moseprek12@' my_database < ./02-seed-data.sql
+
+    # 5. Verifikimi i të dhënave
     - name: Verify Database Setup
       run: |
-        sudo mysql -u root -p${{ secrets.MYSQL_PASSWORD }} -e "USE my_database; SELECT * FROM employees;"
+        sudo mysql -u root -p'Moseprek12@' -e "USE my_database; SELECT * FROM employees;"
