--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -23,25 +23,20 @@ jobs:
         sudo systemctl start mysql
         sudo systemctl enable mysql
 
-    # 3. Krijo një përdorues të ri MySQL dhe vendos fjalëkalimin
-    - name: Create MySQL User and Set Password
+    # 3. Përdorimi i sudo për të ekzekutuar komandat me fjalëkalimin e duhur
+    - name: Set MySQL Root Password and Create Database
       run: |
-        sudo mysql -e "CREATE USER 'githubuser'@'localhost' IDENTIFIED BY 'Moseprek12@';"
-        sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'githubuser'@'localhost' WITH GRANT OPTION;"
-        sudo mysql -e "FLUSH PRIVILEGES;"
+        sudo mysql -u root -e "UPDATE mysql.user SET authentication_string=PASSWORD('Moseprek12@') WHERE User='root';"
+        sudo mysql -u root -e "FLUSH PRIVILEGES;"
+        sudo mysql -u root -e "CREATE DATABASE IF NOT EXISTS my_database;"
 
-    # 4. Krijo bazën e të dhënave
-    - name: Create Database
-      run: |
-        sudo mysql -u githubuser -p'Moseprek12@' -e "CREATE DATABASE IF NOT EXISTS my_database;"
-
-    # 5. Ekzekuto SQL skriptet për krijimin e tabelave dhe futjen e të dhënave
+    # 4. Ekzekuto SQL skriptet për krijimin e tabelave dhe futjen e të dhënave
     - name: Execute SQL Scripts
       run: |
-        sudo mysql -u githubuser -p'Moseprek12@' my_database < ./01-create-table.sql
-        sudo mysql -u githubuser -p'Moseprek12@' my_database < ./02-seed-data.sql
+        sudo mysql -u root -p'Moseprek12@' my_database < ./01-create-table.sql
+        sudo mysql -u root -p'Moseprek12@' my_database < ./02-seed-data.sql
 
-    # 6. Verifikimi i të dhënave
+    # 5. Verifikimi i të dhënave
     - name: Verify Database Setup
       run: |
-        sudo mysql -u githubuser -p'Moseprek12@' -e "USE my_database; SELECT * FROM employees;"
+        sudo mysql -u root -p'Moseprek12@' -e "USE my_database; SELECT * FROM employees;"
