--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -1,4 +1,4 @@
-name: MySQL Setup - Create Database and Table
+name: MySQL Database Creation
 
 on:
   push:
@@ -6,34 +6,35 @@ on:
       - main
 
 jobs:
-  mysql-setup:
+  setup-mysql:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout the repository
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # 2. Install MySQL
     - name: Install MySQL
       run: |
-        sudo apt update -y
-        sudo apt install -y mysql-server mysql-client
-        sudo systemctl start mysql
-        sudo systemctl enable mysql
+        sudo apt update
+        sudo apt install -y mysql-server
 
-    # 3. Create the 'employees' database and use it
-    - name: Create Database and Use It
+    - name: Create MySQL Database
       run: |
-        sudo mysql -u root -p'Moseprek12@' -e "CREATE DATABASE employees;"
-        sudo mysql -u root -p'Moseprek12@' -e "USE employees;"
+        sudo mysql -u root -p
+        CREATE DATABASE employees;
+        USE employees;
+        
+    - name: Create table in the database
+      run: |
+        sudo mysql -e "USE employees; CREATE TABLE IF NOT EXISTS employees (
+          id INT AUTO_INCREMENT PRIMARY KEY,
+          name VARCHAR(100),
+          role VARCHAR(50),
+          created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+        );"
 
-    # 4. Create the 'employees' table using the SQL file
-    - name: Create Table from SQL File
+    - name: Seed data into the database
       run: |
-        sudo mysql -u root -p'Moseprek12@' employees < ./01-create-table.sql
-
-    # 5. Seed Data (Insert data into the employees table using SQL file)
-    - name: Seed Data from SQL File
-      run: |
-        sudo mysql -u root -p'Moseprek12@' employees < ./02-seed-data.sql
+        sudo mysql -e "USE employees; INSERT INTO employees (name, role) VALUES
+        ('Altin', 'DevOps Engineer'),
+        ('Enis', 'Developer');"
