--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -22,9 +22,9 @@ jobs:
       run: |
         sudo service mysql start
 
-    - name: Create MySQL Database
+    - name: Create MySQL Database with root user
       run: |
-        sudo mysql -e "CREATE DATABASE employees;"
+        sudo mysql -e "CREATE DATABASE IF NOT EXISTS employees;"
 
     - name: Create table in the database
       run: |
