--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -28,12 +28,13 @@ jobs:
 
     - name: Create table in the database
       run: |
-        sudo mysql -u root -e "USE employees; CREATE TABLE IF NOT EXISTS employees (
+        sudo mysql -u root -e
+        USE employees; CREATE TABLE IF NOT EXISTS employees (
           id INT AUTO_INCREMENT PRIMARY KEY,
           name VARCHAR(100),
           role VARCHAR(50),
           created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-        );"
+        );
 
     - name: Seed data into the database
       run: |
